# data-analysis-hospitals

./: README.MD  pyproject.toml
src/hospitals/: analysis.py
test/: test_analysis.py
