[tool.poetry]
name = "data-analysis-hospitals"
version = "0.1.0"
description = ""
authors = ["wisskirchenj <wisskirchen.juergen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pytest = "^8.2.1"
pytest-custom-exit-code = "^0.3.0"
matplotlib = "^3.9.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
